[FIX] Fix icons going away in about card if title too long

--- a/src/app/components/About/styles.module.scss
+++ b/src/app/components/About/styles.module.scss
@@ -13,12 +13,13 @@
   h2 {
     margin-bottom: 0.8rem;
     text-align: center;
-  }
 
-  img {
-    width: 2rem;
-    height: 2rem;
-    object-fit: contain;
+    img {
+      margin-right: 1rem;
+      width: 2rem;
+      height: 2rem;
+      object-fit: contain;
+    }
   }
 
   p {
